@@ -6,6 +6,7 @@ v0.9.2
 * [BGBUILD-205] Error while converting to EC2 when guest OS is CentOS/RHEL 5
 * [BGBUILD-213] CloudSigma support
 * [BGBUILD-209] Wrong /etc/mtab on Fedora 15 appliances causes errors
+* [BGBUILD-203] Vmware vmdk disk size is wrong when installing via kickstart files
 
 v0.9.1
 
